--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   httpd:
     image: nginx:latest 
     volumes:
-      -
+      - ./html:/usr/share/nginx/html
     ports:
       - "42060:80"
     networks:
