--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,6 @@
-version: "3.9"
-
 services:
   httpd:
-    image: nginx:latest 
+    image: nginx:latest
     volumes:
       - ./html:/usr/share/nginx/html
     ports:
@@ -14,7 +12,7 @@ services:
     image: canals/php:latest
     ports:
       - "42063:80"
-    volumes :
+    volumes:
       - ./WebDirectoy.core/app:/var/www/html
     working_dir: /var/www/html
     networks:
@@ -39,7 +37,7 @@ services:
     ports:
       - "42062:8080"
     networks:
-      - Annuraire.net
+      - Annuaire.net  # Corrigé le nom du réseau ici
 networks:
   Annuaire.net:
     driver: bridge
